Fix divider position on firefox

--- a/assets/dev/scss/frontend/widgets/icon-list.scss
+++ b/assets/dev/scss/frontend/widgets/icon-list.scss
@@ -18,6 +18,7 @@
 			position: absolute;
 			bottom: 0;
 			width: 100%;
+			@include start(0);
 		}
 
 		&, a {
